force-app/main/default/objects/Request_Access__c/Request_Access__c.object-meta.xml
<CustomObject>
    <label>Request Access</label>
    <nameField>
        <label>Request Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Access</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>