force-app/main/default/objects/Request_Access__c/fields/is_Approved__c.field-meta.xml
<CustomField>
    <fullName>is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Approved</label>
    <type>Checkbox</type>
</CustomField>