force-app/main/default/objects/Request_Access__c/fields/Requesting_Reason__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Reason__c</fullName>
    <label>Requesting Reason</label>
    <type>TextArea</type>
</CustomField>