force-app/main/default/objects/Request_Access__c/fields/Requesting_Role__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Role__c</fullName>
    <label>Requesting Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>