force-app/main/default/objects/Request_Access__c/recordTypes/OldRecord.recordType-meta.xml
<RecordType>
    <fullName>OldRecord</fullName>
    <active>true</active>
    <label>OldRecord</label>
</RecordType>