force-app/main/default/objects/Request_Access__c/validationRules/Limit_request_reason_characters_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_request_reason_characters_length</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Name )  &gt;= 80</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Enter Request Reason within 80 characters</errorMessage>
</ValidationRule>