force-app/main/default/objects/Request_Access__c/validationRules/One_active_request_at_a_time.validationRule-meta.xml
<ValidationRule>
    <fullName>One_active_request_at_a_time</fullName>
    <active>false</active>
    <errorConditionFormula>AND(LOWER(VLOOKUP( ($ObjectType.Request_Access__c.Fields.Name) ,  $ObjectType.Request_Access__c.Fields.Name , ( Name ))) = LOWER( Name ), OR(ISNEW(), ISCHANGED( Name )))</errorConditionFormula>
    <errorMessage>One_active_request_at_a_time</errorMessage>
</ValidationRule>