force-app/main/default/objects/Request_Access__c/listViews/Admin_Request_Access.listView-meta.xml
<ListView>
    <fullName>Admin_Request_Access</fullName>
    <filterScope>Queue</filterScope>
    <label>Admin</label>
    <queue>Admin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>