force-app/main/default/objects/Request_Access__c/listViews/Supervisor_Request_Access.listView-meta.xml
<ListView>
    <fullName>Supervisor_Request_Access</fullName>
    <filterScope>Queue</filterScope>
    <label>Supervisor</label>
    <queue>Supervisor</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>